# Solitaire

./: .gitignore  AGENTS.md  AGENT_ONBOARDING.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml  server.json  spec-smart-capture.md
.claude/: settings.json.template
.claude/hooks/: auto-ingest.py  auto-recall.py  claim-scanner.py  hook_errors.py  session-boot.py  writing-gate.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
evals/commitment_detection/: alternative_scorers.py  eval_alternative.py  eval_runner.py  test_cases.py
mcp-server/: README.md  server.py  setup.sh  start.sh
skill/: GETTING_STARTED.md  SKILL.md
skill/hooks/: claude-code-auto-ingest.py  claude-code-claim-scanner.py
skill/references/: commands.md  platforms.md
skill/scripts/: install.sh  verify.sh
solitaire/: __init__.py  __main__.py  __version__.py  ai_writing_tells.md  compat.py  engine.py  librarian_shim.py  platform_utils.py
solitaire/cli/: __init__.py  _engine.py  analytics.py  boot.py  browse.py  core.py  harvest.py  identity.py  ingest.py  maintenance.py  onboard.py  persona.py  profile.py  review.py  skills.py  symbiosis.py  tools.py  topics.py
solitaire/core/: active_summarizer.py  adaptation_engine.py  batch_review.py  behavioral_diff.py  chain_builder.py  cognitive_profile.py  confidence.py  context_window.py  disposition_filter.py  experiential_encoder.py  format_adapter.py  identity_scaffolding.py  intent_context.py  librarian.py  librarian_agent.py  maintenance.py  memory_weight.py  narrative.py  negotiator.py  observer.py  onboarding.py  onboarding_flow.py  persona.py  personality_interview.py  reinforcement.py  resident_knowledge.py  resonance.py  retrieval_feedback.py  retrieval_patterns.py  rhythm.py  session_briefing.py  session_continuity.py  session_residue.py  shared_knowledge.py  signal_texture.py  system_propagator.py  temporal_reasoning.py  tool_finder.py  trend_analyzer.py  types.py  (+3 more)
solitaire/indexing/: contradiction_detector.py  embeddings.py  extractor.py  ingestion_queue.py  project_clusterer.py  topic_router.py  verbatim_extractor.py
solitaire/maintenance/: reclassifier.py
solitaire/outbound/: __init__.py  commitment_detectors.py  config.py  context_detectors.py  marker.py  persona_detectors.py  structural_detectors.py  surface_detectors.py  writing_gate.py
solitaire/preloading/: preloader.py  pressure.py
solitaire/retrieval/: conflict_utils.py  context_builder.py  entity_extractor.py  evaluation_gate.py  project_aliases.yaml  query_expander.py  recall_confidence.py  recall_orchestrator.py  recall_trigger.py  reranker.py  searcher.py
solitaire/storage/: backup.py  fts_rebuild.py  identity_enrichment.py  identity_graph.py  identity_measurement.py  identity_reflection.py  jsonl_store.py  knowledge_graph.py  manifest_manager.py  rolodex.py  schema.py  session_manager.py
solitaire/symbiosis/: __init__.py  auto_memory_reader.py  chatgpt_reader.py  claude_md_reader.py  cli.py  environment_scanner.py  import_orchestrator.py  jsonl_reader.py  markdown_kb_reader.py  priority_ranker.py  reader_base.py  reader_registry.py  solitaire_reader.py  sync_engine.py  text_reader.py
solitaire/utils/: config.py  cost_tracker.py
src/: compat.py  engine.py
src/cli/: __init__.py  _engine.py  core.py  harvest.py  identity.py  onboard.py  residue.py
src/core/: observer.py  (+15 more)
starter/: .gitignore  CLAUDE.md  FIRST_INTERACTION.md  pyproject.toml
tests/: test_adaptation_engine.py  test_backup.py  test_batch_review.py  test_behavioral_diff.py  test_claim_scanner.py  test_cognitive_profile.py  test_contradiction_resolution.py  test_ingestion_contradiction.py  test_maintenance_phase5.py  test_phase3_identity_authority.py  test_provenance_assignment.py  test_smart_capture.py  test_symbiosis.py  test_trend_analyzer.py  test_updater.py  test_writing_gate.py
updater/: UPDATE.bat  build_update.py  update.ps1  update.py
(+42 files in other folders)
