[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solitaire"
version = "1.3.0"
description = "Persistent memory, self-correcting retrieval, and evolving identity for AI agents. Local-first, model-agnostic."
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Dicta Technologies"},
]
keywords = ["ai", "memory", "agents", "identity", "persistent-memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
llm = [
    "anthropic>=0.40.0",
]
compression = [
    "tiktoken>=0.5.0",
]
all = [
    "solitaire[embeddings,llm,compression]",
]

[project.scripts]
solitaire = "solitaire.cli:main"

[project.urls]
Homepage = "https://github.com/PRDicta/Solitaire-for-Agents"
Repository = "https://github.com/PRDicta/Solitaire-for-Agents"

[tool.setuptools.packages.find]
include = ["solitaire*"]

[tool.setuptools.package-data]
solitaire = ["py.typed", "retrieval/project_aliases.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
collect_ignore_glob = [
    "tests/tests/*",
    "tests/__pycache__/*",
    "tests/test_anticipatory.py",
]