[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solitaire-ai"
version = "1.5.0"
description = "Persistent memory and evolving identity for AI agents. Cross-session recall, behavioral continuity, self-correcting retrieval. Local-first, model-agnostic."
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Dicta Technologies"},
]
keywords = ["ai", "memory", "agents", "identity", "persistent-memory", "mcp", "mcp-server", "agent-memory", "long-term-memory", "knowledge-graph", "llm-memory", "context-persistence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
llm = [
    "anthropic>=0.40.0",
]
compression = [
    "tiktoken>=0.5.0",
]
all = [
    "solitaire-ai[embeddings,llm,compression]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
solitaire = "solitaire.cli:main"

[project.urls]
Homepage = "https://github.com/PRDicta/Solitaire-for-Agents"
Repository = "https://github.com/PRDicta/Solitaire-for-Agents"
Documentation = "https://github.com/PRDicta/Solitaire-for-Agents/blob/main/AGENTS.md"
"MCP Server" = "https://github.com/PRDicta/Solitaire-for-Agents/tree/main/mcp-server"

[tool.setuptools.packages.find]
include = ["solitaire*"]

[tool.setuptools.package-data]
solitaire = ["py.typed", "retrieval/project_aliases.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/tests --ignore=tests/test_anticipatory.py --cov=solitaire --cov-report=term-missing --cov-fail-under=20"